--- a/index.html
+++ b/index.html
@@ -5,18 +5,51 @@
     <title>Kirppu 23v</title>
     <link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet"> 
     <style>
-      html, body, .page {
+      * {
+        box-sizing: border-box;
+      }
+      html, body {
         width: 100%;
         height: 100%;
+        padding: 0;
+        margin: 0;
       }
       .page {
+        width: 100%;
+        height: 100%;
+        padding: 2rem;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: flex-start;
+        background: rgb(226, 131, 240);
+      }
+      .wrap {
+        position: relative;
+      }
+      h1 {
+        width: auto;
+        margin: auto;
         font-family: 'Marck Script', cursive;
+        font-size: 4rem;
+        color: white;
+        text-align: center;
+        position: absolute;
+        top: 0;
+      }
+      img {
+        display:block;
+        margin: auto;
+        width: 50%;
       }
     </style>
   </head>
   <body>
     <div class="page">
-      Hyvää syntymäpäivää Kirpulle
+      <div class="wrap">
+        <img src="heart.png">
+        <h1>Hyvää 23v syntymäpäivää Kirpulle</h1>  
+      </div>
     </div>
   </body>
 </html>
