--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         width: auto;
         margin: auto;
         font-family: 'Marck Script', cursive;
-        font-size: 4rem;
+        font-size: 6rem;
         color: white;
         text-align: center;
         position: absolute;
@@ -46,7 +46,8 @@
         }
       }
       img {
-        display:block;
+        padding-top: 3rem;
+        display: block;
         margin: auto;
         width: 50%;
         overflow: hidden;
